# heliosdb-sdks

./: .gitignore  LICENSE  README.md
cli/: index.js  package.json
homebrew/: heliosdb-nano.rb
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/src/heliosdb_autogen/: __init__.py  agents.py  client.py  group_chat.py  memory.py  retrievers.py  tools.py
integrations/make/: heliosdb-module.json
integrations/n8n/: package.json
integrations/n8n/src/nodes/HeliosDb/: HeliosDb.node.ts
integrations/retool/: README.md  heliosdb-datasource.json
integrations/vscode/: package.json
integrations/vscode/snippets/: heliosdb.json
integrations/vscode/src/: client.ts  extension.ts
integrations/vscode/src/panels/: nlQuery.ts  results.ts  vectorSearch.ts
integrations/vscode/src/views/: branches.ts  connections.ts  explorer.ts  history.ts  vectors.ts
integrations/zapier/: index.js  package.json
sdks/go/: go.mod  heliosdb.go
sdks/python/: HELIOSDB_SQLITE_API_REFERENCE.md  HELIOSDB_SQLITE_ARCHITECTURE.md  HELIOSDB_SQLITE_USAGE_EXAMPLES.py  MANIFEST.in  README.md  SQLITE_COMPATIBILITY_LAYER_DELIVERY.md  pyproject.toml  setup.py
sdks/python-sqlite/: .gitignore  INSTALLATION_TEST.py  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
sdks/python-sqlite/heliosdb_sqlite/: __init__.py  _version.py  cli.py  connection.py  cursor.py  exceptions.py  utils.py
sdks/python/examples/: rag_quickstart.py
sdks/python/heliosdb/: HELIOSDB_SQLITE_CONNECTION_WRAPPER.py  HELIOSDB_SQLITE_URI_PARSER.py  __init__.py  branch.py  client.py  examples_connection_wrapper.py  exceptions.py  memory.py  models.py  test_connection_wrapper.py  vector.py
sdks/python/heliosdb/embeddings/: __init__.py  base.py  cohere.py  local.py  openai.py
sdks/python/heliosdb/integrations/: __init__.py  langchain.py  llamaindex.py
sdks/python/heliosdb_sqlite/: GETTING_STARTED.md  README.md  __init__.py  main.py  py.typed
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: errors.ts  index.ts  types.ts
sdks/typescript/src/auth/: index.ts
sdks/typescript/src/client/: branch.ts  heliosdb.ts  query-builder.ts
sdks/typescript/src/memory/: agent-memory.ts  index.ts
sdks/typescript/src/realtime/: index.ts
sdks/typescript/src/vector/: store.ts
