[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heliosdb-autogen"
version = "3.0.0"
description = "HeliosDB integration for Microsoft AutoGen multi-agent framework"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "HeliosDB Team" }
]
keywords = [
    "heliosdb",
    "autogen",
    "multi-agent",
    "ai",
    "database",
    "vector-search",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyautogen>=0.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Dimensigon/heliosdb-sdks"
Documentation = "https://heliosdb.dev/integrations/autogen"
Repository = "https://github.com/Dimensigon/heliosdb-sdks"

[tool.hatch.build.targets.wheel]
packages = ["src/heliosdb_autogen"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
