# pyproject.toml - Modern Python Packaging for heliosdb-sqlite
# PEP 517/518 compliant build configuration

[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools-rust>=1.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heliosdb-sqlite"
version = "3.0.0"
description = "SQLite-compatible interface for HeliosDB with vector search, encryption, and time-travel queries"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "HeliosDB Team", email = "support@heliosdb.com"}
]
maintainers = [
    {name = "HeliosDB Team", email = "support@heliosdb.com"}
]
keywords = [
    "sqlite",
    "database",
    "embedded",
    "vector-search",
    "encryption",
    "postgresql",
    "compatibility",
    "sql",
    "ai",
    "machine-learning",
    "rag",
    "semantic-search",
    "time-travel",
    "dbapi",
]
classifiers = [
    # Development Status
    "Development Status :: 5 - Production/Stable",

    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",

    # License
    "License :: OSI Approved :: GNU Affero General Public License v3",

    # Operating Systems
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    # Programming Languages
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: SQL",

    # Topics
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",

    # Typing
    "Typing :: Typed",
]
requires-python = ">=3.8"

# No runtime dependencies - all functionality bundled in wheel
dependencies = []

[project.optional-dependencies]
# Vector operations and scientific computing
vector = [
    "numpy>=1.20.0,<2.0",
    "scipy>=1.7.0",
]

# Data manipulation and analysis
pandas = [
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
]

# Async database operations
async = [
    "aiofiles>=23.0.0",
]

# Type checking support
types = [
    "types-setuptools>=65.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

# Documentation generation
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# All optional features
all = [
    "numpy>=1.20.0,<2.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Dimensigon/heliosdb-sdks"
Documentation = "https://docs.heliosdb.io/sqlite-compat"
Repository = "https://github.com/Dimensigon/heliosdb-sdks"
"Source Code" = "https://github.com/Dimensigon/heliosdb-sdks/tree/main/sdks/python-sqlite"
Issues = "https://github.com/Dimensigon/heliosdb-sdks/issues"
Changelog = "https://github.com/Dimensigon/heliosdb-sdks/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/heliosdb"
"Bug Tracker" = "https://github.com/Dimensigon/heliosdb-sdks/issues"

[project.scripts]
# Console scripts / entry points
heliosdb-sqlite-check = "heliosdb_sqlite.cli:check_installation"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["heliosdb_sqlite*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
heliosdb_sqlite = [
    "py.typed",
    "binaries/*",
    "*.pyi",
]

# ===================================
# Development Tools Configuration
# ===================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=heliosdb_sqlite",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "compatibility: marks tests as SQLite compatibility tests",
]
asyncio_mode = "auto"
timeout = 300
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["heliosdb_sqlite"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "PLR2004", "PLR0913"]

[tool.ruff.isort]
known-first-party = ["heliosdb_sqlite"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["heliosdb_sqlite"]
known_third_party = ["pytest", "setuptools"]

# ===================================
# Build Configuration
# ===================================

[tool.cibuildwheel]
# Build wheels for CPython 3.8-3.13
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds, PyPy, and musllinux
skip = [
    "*-win32",
    "*-manylinux_i686",
    "pp*",
    "*-musllinux_*",
]

# Build options
build-verbosity = 1

# Linux build settings
[tool.cibuildwheel.linux]
before-all = [
    "curl https://sh.rustup.rs -sSf | sh -s -- -y",
    "source $HOME/.cargo/env",
    "rustc --version",
]
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# macOS build settings
[tool.cibuildwheel.macos]
before-all = [
    "curl https://sh.rustup.rs -sSf | sh -s -- -y",
    "source $HOME/.cargo/env",
    "rustc --version",
]
environment = { PATH = "$HOME/.cargo/bin:$PATH", MACOSX_DEPLOYMENT_TARGET = "10.12" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

# Windows build settings
[tool.cibuildwheel.windows]
before-build = [
    "rustup-init -y",
    "rustup default stable",
]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
