[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heliosdb"
version = "3.0.0"
description = "Official Python SDK for HeliosDB - AI-native embedded database"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "HeliosDB Team", email = "support@heliosdb.com" }
]
keywords = [
    "database",
    "embedded",
    "vector-database",
    "postgresql",
    "ai",
    "langchain",
    "llm",
    "rag",
    "sql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0", "pyarrow>=14.0.0"]
numpy = ["numpy>=1.24.0"]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
embeddings = ["sentence-transformers>=2.2.0"]
all = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "langchain-core>=0.1.0",
    "llama-index-core>=0.10.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Dimensigon/heliosdb-sdks"
Documentation = "https://docs.heliosdb.io/python"
Repository = "https://github.com/Dimensigon/heliosdb-sdks"
Issues = "https://github.com/Dimensigon/heliosdb-sdks/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/heliosdb",
]

[tool.hatch.build.targets.wheel]
packages = ["heliosdb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
