[package]
name = "heliosdb-client"
version = "3.0.0"
edition = "2021"
authors = ["HeliosDB Team"]
license = "AGPL-3.0-only"
description = "Rust client for HeliosDB - AI-native embedded database"
repository = "https://github.com/Dimensigon/heliosdb-sdks"
documentation = "https://docs.rs/heliosdb-client"
readme = "README.md"
keywords = ["database", "vector-database", "sql", "embedded", "ai"]
categories = ["database", "api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
